--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,8 +10,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-  # schedule:
-  #   - cron: '0 21 * * *'
 
 jobs:
   run-docker-tests:
@@ -44,9 +42,26 @@ jobs:
         run: cd local-setup && docker compose logs && cd ..
       - name: Hello World Docker tests
         run: cd hello-world-docker && docker ps && yarn test
-  run-im-tests:
-    name: IM Node Tests
-    runs-on: ubuntu-latest
+  im-setup:
+    name: IM Node Setup
+    runs-on: macos-latest
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        node-version: ["18.15.0"]
+    steps:
+      - name: Download and extract era_test_node binary
+        run: |
+          wget https://github.com/matter-labs/era-test-node/releases/download/v0.1.0-alpha.2/era_test_node-v0.1.0-alpha.2-x86_64-apple-darwin.tar.gz
+          tar -xzf era_test_node-v0.1.0-alpha.2-x86_64-apple-darwin.tar.gz
+          chmod +x era_test_node
+
+      - name: Run era_test_node binary
+        run: ./era_test_node run &
+  custom-aa-tests:
+    name: Custom AA Tests
+    needs: im-setup
+    runs-on: macos-latest
     timeout-minutes: 30
     strategy:
       matrix:
@@ -57,66 +72,33 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Generate Dockerfile
-        uses: 1arp/create-a-file-action@0.2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          file: "Dockerfile"
-          content: |
-            # Use Ubuntu 18.04 as the base image with x86_64
-            FROM ubuntu:18.04@sha256:dca176c9663a7ba4c1f0e710986f5a25e672842963d95b960191e2d9f7185ebe
+          node-version: ${{ matrix.node-version }}
 
-            # Install necessary dependencies
-            RUN apt-get update && \
-                apt-get install -y wget curl gnupg2 && \
-                echo "deb http://security.ubuntu.com/ubuntu bionic-security main" >> /etc/apt/sources.list && \
-                apt-get update && \
-                apt-get install -y libssl1.0.0 && \
-                apt-get install -y cmake pkg-config clang socat
-
-            # Fetch and extract the era_test_node binary
-            RUN wget https://github.com/matter-labs/era-test-node/releases/download/v0.1.0/era_test_node-v0.1.0-x86_64-unknown-linux-gnu.tar.gz \
-                && tar -xzf era_test_node-v0.1.0-x86_64-unknown-linux-gnu.tar.gz \
-                && mv era_test_node /usr/local/bin/ \
-                && rm era_test_node-v0.1.0-x86_64-unknown-linux-gnu.tar.gz
-
-            # Copy the start script
-            COPY start_script.sh /start_script.sh
-
-            # Make the start script executable
-            RUN chmod +x /start_script.sh
-
-            # Set the start script as the entry point
-            ENTRYPOINT ["/start_script.sh"]
-
-      - name: Generate start_script
-        uses: 1arp/create-a-file-action@0.2
+      - name: Custom AA tests
+        run: |
+          cd custom-aa && yarn && yarn test
+  hello-world-tests:
+    name: Hello World Tests
+    needs: im-setup
+    runs-on: macos-latest
+    timeout-minutes: 30
+    strategy:
+      matrix:
+        node-version: ["18.15.0"]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          file: "start_script.sh"
-          content: |
-            #!/bin/bash
-            socat TCP-LISTEN:'8011',fork,reuseaddr TCP:127.0.0.1:3051 &
-            era_test_node --port 3051 run &
-            wait
-
-      - name: Build era_test_node_image Docker image
-        run: docker build -t era_test_node_image .
-
-      - name: Run era_test_node_image Docker container
-        run: docker run -d --name era_test_node_container -p 8011:8011 era_test_node_image
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile
-
       - name: Hello World tests
         run: |
-          cd hello-world && yarn run test
-
-      - name: Custom-aa tests
-        run: |
-          cd custom-aa && yarn run test
+          cd hello-world && yarn && yarn test
