--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,8 +12,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-docker-tests:
-    name: Docker Test
+
+  docker-hello-world-tests:
+    name: Docker Hello World Tests
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
@@ -42,6 +43,7 @@ jobs:
         run: cd local-setup && docker compose logs && cd ..
       - name: Hello World Docker tests
         run: cd hello-world-docker && docker ps && yarn test
+
   custom-aa-tests:
     name: Custom AA Tests
     runs-on: macos-latest
@@ -55,6 +57,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: |
+          yarn install --frozen-lockfile
+
       - name: Download and extract era_test_node binary
         run: |
           wget https://github.com/matter-labs/era-test-node/releases/download/v0.1.0-alpha.2/era_test_node-v0.1.0-alpha.2-x86_64-apple-darwin.tar.gz
@@ -68,18 +79,10 @@ jobs:
         run: |
           while ! curl -s -X POST -d '{"jsonrpc":"2.0","method":"net_version","id":1}' -H 'Content-Type: application/json' http://127.0.0.1:8011; do sleep 1; done
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile
-
       - name: Custom AA tests
         run: |
           cd custom-aa && yarn test
+
   hello-world-tests:
     name: Hello World Tests
     runs-on: macos-latest
@@ -93,6 +96,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: |
+            yarn install --frozen-lockfile
+
       - name: Download and extract era_test_node binary
         run: |
           wget https://github.com/matter-labs/era-test-node/releases/download/v0.1.0-alpha.2/era_test_node-v0.1.0-alpha.2-x86_64-apple-darwin.tar.gz
@@ -105,15 +117,6 @@ jobs:
       - name: Wait for era_test_node to be ready
         run: |
           while ! curl -s -X POST -d '{"jsonrpc":"2.0","method":"net_version","id":1}' -H 'Content-Type: application/json' http://127.0.0.1:8011; do sleep 1; done
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies
-        run: |
-          yarn install --frozen-lockfile
 
       - name: Hello World tests
         run: |
